syntax = "proto3";

import "gogo/protobuf/gogoproto/gogo.proto";
import "protobuf/types/struct.proto";

package mesg.execution.types;
option go_package = "github.com/mesg-foundation/engine/x/execution/internal/types";

// The message to create an Execution.
message MsgCreate {
  // The msg's signer.
  bytes signer = 1 [
    (gogoproto.moretags) = 'validate:"required,accaddress"',
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];

  // taskKey to filter executions.
  string taskKey = 2 [
    (gogoproto.moretags) = 'validate:"required,printascii"'
  ];

  mesg.protobuf.Struct inputs = 3;

  // tags the execution.
  repeated string tags = 4 [
    (gogoproto.moretags) = 'validate:"dive,printascii"'
  ];

  bytes parentHash = 5 [
    (gogoproto.moretags) = 'validate:"required_without=EventHash,omitempty,hash"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  bytes eventHash = 6 [
    (gogoproto.moretags) = 'validate:"required_without=ParentHash,omitempty,hash"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  bytes processHash = 7 [
    (gogoproto.moretags) = 'validate:"omitempty,hash"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  string nodeKey = 8;

  bytes executorHash = 9 [
    (gogoproto.moretags) = 'validate:"required,hash"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  // price of running the execution.
  string price = 10 [
    (gogoproto.moretags) = 'validate:"coinsPositiveZero"'
  ];
}

// The message to update an Execution.
message MsgUpdate {
  // The execution's executor.
  bytes executor = 1 [
    (gogoproto.moretags) = 'validate:"required,accaddress"',
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];

  // Hash represents execution.
  bytes hash = 2 [
    (gogoproto.moretags) = 'validate:"required,hash"',
    (gogoproto.customtype) = "github.com/mesg-foundation/engine/hash.Hash",
    (gogoproto.nullable) = false
  ];

  // result pass to execution
  oneof result {
    // outputs is a success result.
    mesg.protobuf.Struct outputs = 3;

    // error is an error result.
    string error = 4;
  }
}
